...
    <string name="permission_dialog_title">Allow Notifications</string>
    <string name="auto_start_description">please enable autostart, otherwise the notifications won\'t show</string>

    <string name="filter_by">Filter by</string>
    <string name="deals_filters">Filters</string>
    <string name="deals_filter_price_range">Price Range</string>
    <string name="update_filters">Update filters</string>
    <string name="deals_filter_rating">Deal Rating</string>
    <string name="deals_filter_recent">Recent</string>
    <string name="deals_filter_saving">Savings</string>
    <string name="deals_filter_store">Store</string>
    <string name="deals_filter_price">Price</string>
    <string name="deals_filter_title">Title</string>
    <string name="deals_filter_review">Review</string>

    <string name="deals">Deals</string>
    <string name="deals_quantity">%1$s Deals</string>
...
