...

    val context = LocalContext.current

    Column(
        modifier = Modifier
            .padding(8.dp)
            .testTag("filter dialog")
            .fillMaxWidth(),
        verticalArrangement = Arrangement.spacedBy(8.dp)

    ) {

        Text(
...

        var expanded by remember {
            mutableStateOf(false)
        }
        ExposedDropdownMenuBox(expanded = expanded, onExpandedChange = { expanded = !expanded }) {

            OutlinedTextField(modifier = Modifier.testTag("dropdown")
                .fillMaxWidth()
                .menuAnchor(),
                value = stringArrayResource(id = R.array.filter_list)[sortvalueIndex],
                onValueChange = {},
                readOnly = true,
                trailingIcon = {
...
